--- a/ms_2_intro_res_disc.Rmd
+++ b/ms_2_intro_res_disc.Rmd
@@ -28,7 +28,7 @@ One major outcome of this body of science is the various compiled databases of s
 
 The two datasets ostensibly describe the same information, but significant differences in methodology and intent could lead to dramatically different understandings of our marine ecosystems, with significant implications for policy and conservation recommendations.  Importantly, biases in taxonomic or spatial coverage within a dataset could shift management and conservation actions away from places or species that are most in need.  Inaccurate indications of presence or absence could lead to ineffective marine reserve systems and management plans (Rondinini et al. 2006) (Jetz 2008?).
 
-To understand the implications of differences between the AquaMaps and IUCN datasets, we compared how each data source represents the global spatial and taxonomic distribution of species.  Most notably, AquaMaps includes range maps for many more species (currently `r format(n_spp_am, big.mark = ',')`; `r p_spp_am`% of total), such that most global analyses related to biodiversity to date have used AquaMaps (IUCN range map data exist for only `r format(n_spp_iucn, big.mark = ',')` species).  For the `r format(n_spp_both, big.mark = ',')` (`r p_both_all`% of total) species mapped in both datasets, we examined how well the maps align and determined several issues that lead to misalignment between predicted species distributions, and outline possible improvements. 
+To understand the implications of differences between the AquaMaps and IUCN datasets, we compared how each data source represents the global spatial and taxonomic distribution of species.  Most notably, AquaMaps includes range maps for many more species (currently `r format(n_spp_am, big.mark = ',')` species; `r p_spp_am`% of total), such that most global analyses related to biodiversity to date have used AquaMaps (IUCN range map data exist for only `r format(n_spp_iucn, big.mark = ',')` species).  For the `r format(n_spp_both, big.mark = ',')` species (`r p_both_all`% of total) mapped in both datasets, we examined how well the maps align and determined several issues that lead to misalignment between predicted species distributions, and outline possible improvements. 
 
 We then subjected two recent marine biodiversity studies - an assessment of the status of global biodiversity within the Ocean Health Index (Halpern et al. 2012, 2015) and a global analysis of gaps in protection afforded by marine protected areas (MPAs) (Klein et al. 2015) - to a sensitivity analysis. ... ___substituting___ one dataset over the other, to highlight the possible consequences of different data use decisions on our understanding of _the status of_ marine biodiversity. ___BSH suggestion: We used all unique species range data from both sources but substituted one dataset over the other for shared species to highlight the possible consequences of different data use decisions on our understanding of the status of and protection of marine biodiversity.___
 
@@ -50,9 +50,13 @@ IUCN range maps are intended to include all possible regions in which a species 
 
 ## How and why the datasets differ
 
-The IUCN publishes species range maps as polygon shapefiles, bundled by taxonomic groups (REF).  Using a geographic information system (GIS), experts outline spatial polygons to represent a given species' "limits of distribution" (IUCN 2014) - essentially a refined extent of occurrence, based on observation records and refined by expert understanding of the species' range and habitat preferences.  AquaMaps models species distribution maps based environmental preferences (e.g. temperature, depth, salinity) deduced from occurrence records, published species databases such as FishBase, and expert knowledge.  The AquaMaps model overlays these environmental preferences atop a map of environmental attributes on a 0.5 degree grid, creating a global raster of probability of occurrence for each species.
+The IUCN publishes species range maps as polygon shapefiles, bundled by taxonomic groups (REF).  Using a geographic information system (GIS), experts outline spatial polygons to represent a given species' "limits of distribution" (REF IUCN 2014) - essentially a refined extent of occurrence, based on observation records and refined by expert understanding of the species' range and habitat preferences.  AquaMaps models species distribution based environmental preferences (e.g. temperature, depth, salinity) deduced from occurrence records, published species databases such as FishBase, and expert knowledge.  The AquaMaps model overlays these environmental preferences atop a map of environmental attributes on a 0.5 degree grid, creating a global raster of probability of occurrence for each species (AquaMaps 2013)
 
-The two datasets have notably different taxonomic (Fig. 1A) and regional (Fig. 1B,C) coverage. IUCN-mapped species focus on tropical latitudes and away from the Atlantic and Eastern Pacific compared to AquaMaps-mapped species. These differences can be mitigated by using both datasets, but the underlying methodological differences complicate such direct comparisons, and furthermore ___requires resolving differences (or choosing one source over the other) for the `r format(n_spp_both, big.mark = ',')` shared species.___
+The methodologies behind these datasets imply differences in prediction of species distribution due to errors of commission (falsely indicating species presence) and omission (falsely indicating species absence).  Geographic range data such as IUCN range maps generally include large commission errors, while predicted distribution models such as AquaMaps will likely include fewer commission errors but more omission errors.  Each type of error bears different implications for conservation goals (Rondinini, 2006).
+
+<!-- Geographic ranges generate large commission errors because they assume homogenous species distributions. Predicted distribution data make explicit inferences on species occurrence and their commission and omission errors depend on model structure, on the omission of variables that determine species distribution and on data resolution. Omission errors lead to identifying networks of areas for conservation action that are smaller than required and centred on known species occurrences, thus affecting the comprehensiveness, representativeness and efficiency of selected areas. Commission errors lead to selecting areas not relevant to conservation, thus affecting the representativeness and adequacy of reserve networks. -->
+
+The two datasets have notably different taxonomic (Fig. 1A) and regional (Fig. 1B,C) coverage. IUCN-mapped species focus on tropical latitudes and away from the Atlantic and Eastern Pacific compared to AquaMaps-mapped species. These differences can be mitigated by using both datasets, but the underlying methodological differences complicate such direct comparisons. ___and furthermore requires resolving differences (or choosing one source over the other) for the `r format(n_spp_both, big.mark = ',')` shared species.___
 
 -----
 
@@ -68,11 +72,11 @@ n_q3 <- nrow(spp_list_quads %>% filter(quad == 'q3'))
 n_q4 <- nrow(spp_list_quads %>% filter(quad == 'q4'))
 ```
 
-___BSH suggestion___ To explore differences in species distribution and range between the two datasets, we plotted the distribution alignment (where on the map) against the ratio of extent (how much of the map) for each shared species (Fig. 2a). __Overall we see a negative linear relationship, where increasing similarity in extent (extent ratio approaches 100%) correlates with a decrease in alignment.  [explain/discuss].__  
+To explore differences in species distribution and range between the two datasets, we plotted the distribution alignment (where on the map) against the ratio of extent (how much of the map) for each shared species (Fig. 2A). 
 
 Dividing the map-paired species into quadrants highlights different categories of relationships. The upper right quadrant includes species (n = `r n_q1`) whose map pairs agree in both spatial distribution and extent of described ranges. These species tend to be well-studied and predominantly fall within wide-ranging pelagic organisms such as marine mammals, tunas, and billfishes (Fig. 2B). This result is not surprising, as species with very large ranges are likely to be more aligned regardless of methodology simply because they exist nearly everywhere.
 
-The extent-mismatched maps contained in the upper left quadrant (n = `r n_q2`) provide a richer set of examples to understand the fundamental differences between the datasets.  For many of these species, while the spatial distribution is similar, the IUCN range predicts a significant buffer zone beyond the AquaMaps range.  Corals dominate this quadrant (`r n_q2_corals`; `r round(n_q2_corals/n_q2 * 100, 1)`% of all species in this quadrant).  Most corals and reef-associated organisms prefer shallower waters, and we suspect that many of these disagreements in extent can be explained by bathymetry: seafloor depth is explicitly included in AquaMaps models, while depth is frequently ignored as a factor in IUCN range maps, leading to overprediction of species range into areas too deep to support the species. (For examples and details, see SOM) 
+The extent-mismatched maps contained in the upper left quadrant (n = `r n_q2`) provide a richer set of examples to understand the fundamental differences between the datasets.  For many of these species, while the spatial distribution is similar, the IUCN range predicts a significant buffer zone beyond the AquaMaps range.  Corals dominate this quadrant (n = `r n_q2_corals`; `r round(n_q2_corals/n_q2 * 100, 1)`% of all species in this quadrant).  Most corals and reef-associated organisms prefer shallower waters, and we suspect that many of these disagreements in extent can be explained by bathymetry: seafloor depth is explicitly included in AquaMaps models, while depth is frequently ignored as a factor in IUCN range maps, leading to overprediction of species range into areas too deep to support the species. (For examples and details, see SOM) 
 
 The differences in extent of species maps found in the lower right quadrant (n = `r n_q3`) can in many cases be attributed to "two wrongs make a right."  For these species, IUCN ranges frequently overextend into unsuitable depths, as in the case of many upper left quadrant species, while at the same time AquaMaps ranges often aggressively extrapolate presence into locations where IUCN predicts absence.  This results in an area ratio close to 100%, but similar extents are meaningless when the distributions are poorly aligned.
 
@@ -90,11 +94,11 @@ _Then, say for example, the OHI uses these datasets together (don’t need to ge
 
 ## Application to OHI
 
-The global Ocean Health Index (OHI) (Halpern et al. 2012, 2015), a composite index made up of 10 goals, uses species spatial distribution data and IUCN Red List conservation status to calculate biodiversity status for each of 221 exclusive economic zones. To maximize the number of represented species, spatial distributions were gleaned from both IUCN and AquaMaps datasets, preferring IUCN data for species in both sources.  OHI uses a probability threshold of 40% to determine species presence for AquaMaps data.  Species with no spatial data in either dataset were excluded, as were species with insufficient information to determine conservation status (including species listed as not evaluated or data deficient).
+The global Ocean Health Index (OHI) (Halpern et al. 2012, 2015), a composite index made up of 10 sustainable benefits provided by a healthy ocean, uses species spatial distribution data and IUCN Red List conservation status to calculate biodiversity status (scored from zero to 100) for each of the world's 221 exclusive economic zones. To maximize the number of represented species, OHI gleans spatial distributions from both IUCN and AquaMaps datasets, prioritizing IUCN data for the subset of species in both sources.  OHI uses a probability threshold of 40% to determine species presence for AquaMaps data.
 
-_Briefly summarize results_
+We recalculated the OHI species status score under several scenarios to observe the impact of toggling the prioritized data set from IUCN to AquaMaps, and toggling the AquaMaps presence threshold from 40% to 0% (<a href = '#fig3'>Fig. 3</a>).  Most country scores varied by fewer than five points across the three scenarios; a few country scores decreased by as many as 12 points, indicating a more dire assessment of species conservation status.
 
-Since the Ocean Health Index Species subgoal relies on spatial data from both datasets, the impacts of these threshold and preference changes will be somewhat muted (<a href = '#fig3'>Figure 3</a>).  When IUCN range maps are the preferred data source, only the subset of AquaMaps-only species will be affected by threshold changes; and when AquaMaps is the preferred source, the IUCN-only species will dampen the effect of a threshold change.
+_Since the Ocean Health Index Species subgoal relies on spatial data from both datasets, the impacts of these threshold and preference changes will be somewhat muted.  When IUCN range maps are the preferred data source, only the subset of AquaMaps-only species will be affected by threshold changes; and when AquaMaps is the preferred source, the IUCN-only species will dampen the effect of a threshold change._
 
 -----  
 
@@ -102,17 +106,7 @@ Since the Ocean Health Index Species subgoal relies on spatial data from both da
 
 Klein et al. (2015) compared the global distribution of species to the global distribution of marine protected areas to assess how well the MPAs protect key species, and to identify which species fall through the gaps in protection.  The MPA gap analysis relied on the AquaMaps database available in early 2015, comprising distribution maps for XXX species.  Species presence was defined using a probability threshold of 50% or greater.  The study defined four subsets of protected areas using the World Database of Protected Areas, based upon combinations of IUCN protected area classification, marine designation, and spatial marine coverage.  The study determined that currently defined marine protected areas (IUCN categories I through IV overlapping with marine areas) are woefully inadequate in protecting marine biodiversity; 90.5% of species have less than 5% of their overall range represented within marine protected areas.
 
-working on the analysis...
-
-* rerun based on old AquaMaps at 50% (to verify methodology gets a close result to paper), then new AquaMaps for updated baseline
-    * consider also: filter on STATUS == 'Designated', and filter out those pesky fishery management areas and manatee speed zones...
-* run with threshold at 0% (not all the same as original paper)
-* run with filtering out data-poor species?
-* run with IUCN maps instead of AquaMaps
-* Which aspects of the analysis should we focus on?:
-    * overall protection, for 4th subset of protected areas? or overall for all subsets? (see paper, table 1)
-    * overall vs broken down by taxonomic groups? (see paper, figure 1)
-    * spatial distribution of gap species (see paper, figure 2)
+___working on the analysis...___
 
 _Predictions:  What happens when using a 0% threshold instead of a 50%?  What happens when using IUCN rather than AM?  IUCN tends to overestimate extent esp for coastal species?  More species will be included in MPAs so fewer apparent gap species.  Included range area inside MPAs will increase.  Policy implications?_
 
@@ -120,17 +114,15 @@ _Predictions:  What happens when using a 0% threshold instead of a 50%?  What ha
 
 # Conclusions: What can be done to address the differences
 
-_While the differences between species distributions described by AquaMaps and IUCN can drive different conclusions for conservation research, some of the mechanistic causes can be addressed._ ___oh god this section is so passive voice... arrrrgghhhh___
+Understanding the causes and implications of the differences between these two important datasets can help us better align the predictions of species distributions, increasing their utility for conservation goals.  
 
-__For data providers:__
+__Suggestions for data providers:__
 
-* The training manual for experts creating IUCN Red List maps for marine species suggests that "bathymetry can be used to delineate species' ranges limited by depth in the same way as elevation is used for terrestrial species" (REF https://www.conservationtraining.org/mod/scorm/player.php?a=1412&currentorg=M5L1_ORG&scoid=6492).  Unfortunately, this recommendation appears to be applied haphazardly.  Especially for demersal communities dependent on photosynthesis, bathymetry should be a primary consideration; even a low resolution cutoff of 200 meters would improve the utility of species range maps.
+* The training manual for experts creating IUCN Red List maps for marine species suggests that "bathymetry can be used to delineate species' ranges limited by depth in the same way as elevation is used for terrestrial species" (REF https://www.conservationtraining.org/mod/scorm/player.php?a=1412&currentorg=M5L1_ORG&scoid=6492).  Unfortunately, this recommendation appears to be applied haphazardly.  Especially for demersal communities dependent on photosynthesis, bathymetry should be a primary consideration; even a simple cutoff at the photosynthetic limit of 200 meters would improve the utility of species range maps.
+* The AquaMaps model is a powerful tool for quickly estimating species distribution based on limited information; however, the model's output is only as good as the input data, which for marine species is often sorely limited.  AquaMaps encourages experts to review and comment on the predicted species distribution maps; lessons from the small sample of reviewed maps can be generalized, for example to other species in the same taxonomic group, to further refine the predictions, especially for data-poor species.
+* In addition to environmental preferences and conditions, AquaMaps mapping parameters include area restrictions to help limit over-extrapolation of AquaMaps models.  Currently the area restrictions are denoted by FAO Major Fishing Areas (REF find a reference in AquaMaps somewhere); however, allowing area restrictions based on biogeographical criteria, a la Marine Ecoregions of the World (), would likely have better resolution and predictive power, especially for data-poor species.
 
-* The AquaMaps model is a powerful tool for quickly estimating species presence based on limited information; however, the model's output is only as good as the input data, which for marine species is often sorely limited.  AquaMaps encourages experts to review and comment on the predicted species distribution maps; lessons from the small sample of reviewed maps can be generalized, for example to other species in the same taxonomic group, to further refine the predictions, especially for data-poor species.
-
-* In addition to environmental preferences and conditions, AquaMaps mapping parameters include area restrictions to help limit over-extrapolation of AquaMaps models.  Currently the area restrictions are denoted by FAO Major Fishing Areas (REF find a reference in AquaMaps somewhere); however, allowing area restrictions based on biogeographical criteria, a la MEOW, would likely have better resolution and predictive power, especially for data-poor species.
-
-__For data users:__
+__Suggestions for data users:__
 
 * understand that range maps a la IUCN tend to overestimate presence; AquaMaps are less likely to overestimate presence, but trade off for overestimating absence. Both better than simple point locality data. (Rondinini etc)
 * Using both datasets together can increase the taxonomic and spatial breadth of coverage, as long as the differences between the datasets can be reasonably minimized.  Consider:
